--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </main>
     <header class="hero"></header>
     <article class="content">
-        <section class="search-engine-optimization">
+        <section id="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" alt="Search Engine Optimization" class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
